--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         }
         .content {
           padding-left: 0;
+          padding-block:40px;
           padding-inline: 10px;
         }
         .launch-time div p {
