--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       a {
         text-decoration: none;
       }
+       .dev {
+        color: white;
+        text-align: center;
+      }
       @media (max-width: 500px) {
         h1 {
           font-size: 50px;
@@ -108,6 +112,9 @@
           display: flex;
           justify-content: center;
         }
+        .dev {
+          margin-top: 30px;
+        }
       }
     </style>
   </head>
@@ -138,6 +145,8 @@
           <button id="link">Wish him well</button>
         </a>
       </div>
+            <p class="dev">Made with 💓 by GLtech</p>
+
     </div>
     <script>
       var countDownDate = new Date("Sep 28, 2024 00:00:00").getTime();
